--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,27 +6,27 @@
     <string name="menu_help">Help</string>
     <string name="menu_login">Sign in</string>
     <string name="menu_maps">Map</string>
+    <string name="menu_my_posts">My posts</string>
     <string name="menu_settings">Settings</string>
 
     <!-- Taskbar menu items -->
-    <string name="menu_privacy_policy">Privacy Policy</string>
+    <string name="menu_new_post">New post</string>
+    <string name="menu_privacy_policy">Privacy policy</string>
     <string name="menu_terms_of_service">Terms of service</string>
 
     <!-- Navigation UI Display Titles -->
     <string name="title_fragment_blank">Test</string>
+    <string name="title_fragment_edit_post">Edit post</string>
     <string name="title_fragment_help">Help</string>
     <string name="title_fragment_login">Sign in</string>
     <string name="title_fragment_maps">Map</string>
+    <string name="title_fragment_my_posts">My posts</string>
     <string name="title_fragment_settings">Settings</string>
+    <string name="title_fragment_view_post">View post</string>
 
     <!-- Help UI options -->
     <string name="text_call">Call</string>
     <string name="text_email">Email</string>
-
-    <!-- Server endpoints -->
-    <string name="server_url">https://35.190.179.162:7000</string>
-    <string name="server_get_messages">/messages</string>
-    <string name="server_get_user_messages">/messages/?</string>
 
 
     <!-- TODO: Everything below here was created by auto-generated templates -->
