--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!-- Main Navigation Menu Items -->
     <string name="menu_help">Help</string>
     <string name="menu_login">Sign in</string>
+    <string name="menu_logout">Sign out</string>
     <string name="menu_maps">Map</string>
     <string name="menu_my_posts">My posts</string>
     <string name="menu_settings">Settings</string>
@@ -24,7 +25,18 @@
     <string name="title_fragment_settings">Settings</string>
     <string name="title_fragment_view_post">View post</string>
 
-    <!-- Help UI options -->
+    <!-- Post editor UI -->
+    <string name="upload_post">Upload post</string>
+    <string name="create_new_post">Create new post</string>
+    <string name="image_preview">Image preview</string>
+    <string name="get_directions">Get directions</string>
+    <string name="get_location">Get location</string>
+
+    <!-- Settings UI -->
+    <string name="max_records">Records</string>
+    <string name="max_records_description">Maximum records to display</string>
+
+    <!-- Help UI -->
     <string name="text_call">Call</string>
     <string name="text_email">Email</string>
 
@@ -64,10 +76,4 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
 
-    <!-- Strings related to content creation -->
-    <string name="post_content">Post</string>
-    <string name="create_new_post">Create New Post</string>
-    <string name="title_activity_create_post">CreatePostActivity</string>
-    <string name="image_preview">Image Preview</string>
-    <string name="gps_location">GPS Location</string>
 </resources>
