--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="menu_login">Sign in</string>
     <string name="menu_logout">Sign out</string>
     <string name="menu_maps">Map</string>
-    <string name="menu_my_locations">My locations</string>
+    <string name="menu_my_places">My places</string>
     <string name="menu_posts">Posts</string>
     <string name="menu_settings">Settings</string>
 
@@ -21,7 +21,7 @@
     <string name="title_fragment_help">Help</string>
     <string name="title_fragment_login">Sign in</string>
     <string name="title_fragment_maps">Map</string>
-    <string name="title_fragment_my_posts">My posts</string>
+    <string name="title_fragment_my_places">My places</string>
     <string name="title_fragment_settings">Settings</string>
     <string name="title_fragment_view_post">View post</string>
 
