--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="text_call">Call</string>
     <string name="text_email">Email</string>
 
+    <!-- Editable text hints -->
+    <string name="edit_text_hint">Enter text here</string>
+
 
     <!-- TODO: Everything below here was created by auto-generated templates -->
 
