--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="menu_logout">Sign out</string>
     <string name="menu_maps">Map</string>
     <string name="menu_my_places">My places</string>
-    <string name="menu_posts">Posts</string>
     <string name="menu_settings">Settings</string>
 
     <!-- Taskbar menu items -->
@@ -19,7 +18,6 @@
     <!-- Navigation UI Display Titles -->
     <string name="title_fragment_edit_post">Edit post</string>
     <string name="title_fragment_help">Help</string>
-    <string name="title_fragment_login">Sign in</string>
     <string name="title_fragment_maps">Map</string>
     <string name="title_fragment_my_places">My places</string>
     <string name="title_fragment_settings">Settings</string>
@@ -27,7 +25,6 @@
 
     <!-- Post editor UI -->
     <string name="upload_post">Upload post</string>
-    <string name="create_new_post">Create new post</string>
     <string name="image_preview">Image preview</string>
     <string name="get_directions">Get directions</string>
     <string name="get_location">Get location</string>
@@ -38,7 +35,9 @@
 
     <!-- Help UI -->
     <string name="text_call">Call</string>
+    <string name="text_phone_number">1–800–555–5555</string>
     <string name="text_email">Email</string>
+    <string name="text_email_address">help@example.com</string>
 
     <!-- Editable text hints -->
     <string name="edit_text_hint">Enter text here</string>
@@ -46,22 +45,11 @@
 
     <!-- TODO: Everything below here was created by auto-generated templates -->
 
-    <string name="title_activity_main">MainActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
 
 </resources>
