--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="failure_load_image">Unable to load image, please try selecting another image</string>
     <string name="failure_location_unavailable">Location not available, please try again later</string>
     <string name="failure_network_error">A network error occurred, please try again later</string>
+    <string name="failure_sign_in">A sign in error occurred, please try again later</string>
 
     <!-- Settings UI -->
     <string name="max_records">Records</string>
